--- a/src/VerifyResults.css
+++ b/src/VerifyResults.css
@@ -20,7 +20,7 @@
  
 th {
   color:#D5DDE5;;
-  background:#1b1e24;
+  background:#ff9900;
   border-bottom:4px solid #9ea7af;
   border-right: 1px solid #343a45;
   font-size:23px;
